# particle_accelerator

./: .gitignore  CMakeLists.txt  README.md
.claude/: settings.local.json
config/: default.json
docs/: ROADMAP.md  SPECIFICATION.md
docs/specs/: 01_OVERVIEW.md  02_PHYSICS.md  03_ACCELERATOR.md  04_RENDERING.md  05_APPLICATION.md  06_DATA.md
shaders/: component.frag  component.vert  grid.vert  particle.frag  particle.vert
src/: main.cpp
src/accelerator/: Accelerator.cpp  Accelerator.hpp  Component.cpp  Component.hpp
src/config/: Config.cpp  Config.hpp
src/core/: Window.cpp  Window.hpp
src/physics/: Constants.hpp  EMField.cpp  EMField.hpp  Integrator.cpp  Integrator.hpp  Particle.cpp  Particle.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsEngine.cpp  PhysicsEngine.hpp
src/rendering/: AcceleratorRenderer.cpp  AcceleratorRenderer.hpp  Camera.cpp  Camera.hpp  Mesh.cpp  Mesh.hpp  ParticleRenderer.cpp  ParticleRenderer.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp
src/ui/: BeamStatsPanel.cpp  BeamStatsPanel.hpp  ControlPanel.cpp  ControlPanel.hpp  UIPanel.hpp
src/utils/: Logger.cpp  Logger.hpp  Timer.cpp  Timer.hpp
tests/accelerator/: test_accelerator.cpp  test_component.cpp
tests/physics/: test_constants.cpp  test_emfield.cpp  test_integrator.cpp  test_particle.cpp  test_particlesystem.cpp  test_physicsengine.cpp
tests/rendering/: test_camera.cpp  test_mesh.cpp
tests/utils/: test_logger.cpp  test_timer.cpp
